# annafaqah

./: db.sqlite3  manage.py  pyproject.toml
anna/: admin.py  models.py  views.py
anna/migrations/: 0001_initial.py
anna/template/ngo/: about.html
annafaqah/: asgi.py  settings.py  urls.py  wsgi.py
